Fixes to detail level calculations for sub-maps